feed refactoring